syntax = "proto3";

option csharp_namespace = "AuthManager.GRPC";

package AuthManager;

// The greeting service definition.
service SignUp {
  // Sends a greeting
  rpc CreateAccount (SignUpRequest) returns (SignUpResponse);
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message SignUpResponse{

}